--- a/test_autolens/unit/config/notation/settings_tags.ini
+++ b/test_autolens/unit/config/notation/settings_tags.ini
@@ -4,8 +4,8 @@ log_likelihood_cap=lh_cap
 
 [lens]
 lens=lens
+positions_threshold=pos_on
 no_positions_threshold=pos_off
-positions_threshold=pos
 
 [dataset]
 grid=grid
