--- a/test_autolens/unit/plot/files/plotter/visualize/general.ini
+++ b/test_autolens/unit/plot/files/plotter/visualize/general.ini
@@ -23,3 +23,18 @@ inversion_image_pixelization_grid = True
 parallel_overscan=True
 serial_prescan=True
 serial_overscan=True
+
+[colormaps]
+default=jet
+imaging_plots=bgy
+interferometer_plots=bgy
+fit_imaging_plots=bwy
+fit_interferometer_plots=bwy
+fit_galaxy_plots=bwy
+inversion_plots=bwy
+mapper_plots=bwy
+light_profile_plots=coolwarm
+mass_profile_plots=coolwarm
+galaxy_plots=coolwarm
+plane_plots=coolwarm
+ray_tracing_plots=coolwarm
