--- a/test_autolens/integration/config/notation/label_format.ini
+++ b/test_autolens/integration/config/notation/label_format.ini
@@ -1,13 +1,49 @@
 [format]
+alpha={:.2f}
 angular_diameter_distance_to_earth={:.2f}
-redshift={:.2f}
-luminosity={:.4e}
-sersic_luminosity={:.4e}
+centre_0={:.3f}
+centre_1={:.3f}
+coefficient={:.2f}
+concentration={:.2f}
+contribution_factor={:.2f}
+core_radius={:.2f}
+effective_radius={:.2f}
 einstein_radius={:.2f}
 einstein_mass={:.4e}
-mass_at_truncation_radius={:.4e}
-mass={:.4e}
+elliptical_comps_0={:.2f}
+elliptical_comps_1={:.2f}
+gamma={:.2f}
+inner_coefficient={:.2f}
+inner_slope={:.2f}
+intensity={:.4f}
+intensity_break={:.4f}
+kappa_s={:.2f}
 kpc_per_arcsec={:.2f}
-rho={:.2f}
-concentration={:.2f}
+luminosity={:.4e}
+mass={:.4e}
+mass_at_truncation_radius={:.4e}
+mass_at_200={:.4e}
+mass_to_light_ratio={:.2f}
+mass_to_light_gradient={:.2f}
+noise_factor={:.3f}
+noise_power={:.3f}
+noise_scale={:.3f}
+outer_coefficient={:.2f}
+pixels={:.2f}
 radius={:.2f}
+radius_break={:.2f}
+redshift={:.2f}
+redshift_object={:.2f}
+redshift_source={:.2f}
+rho={:.2f}
+scale_radius={:.2f}
+sersic_index={:.2f}
+shape_0={:.2f}
+shape_1={:.2f}
+sigma={:.2f}
+signal_scale={:.2f}
+sky_scale={:.2f}
+slope={:.2f}
+truncation_radius={:.2f}
+weight_floor={:.2f}
+weight_power={:.2f}
