New DeflectionInput MassProfile release

--- a/docs/howtolens/config/notation/label.ini
+++ b/docs/howtolens/config/notation/label.ini
@@ -21,6 +21,7 @@ mass_to_light_gradient=Tau
 noise_factor=\omega1
 noise_power=\omega2
 noise_scale=\sigma1
+normalization_scale=n
 outer_coefficient=\lambda2
 pixels=N
 radius_break=Rb
@@ -47,6 +48,7 @@ ExternalShear=sh
 HyperBackgroundNoise=hnb
 HyperGalaxy=hg
 HyperImageSky=hi
+InputDeflections=defl
 MassSheet=ms
 Pixelization=pix
 PointMass=m
