--- a/test_autolens/integration/config_mock/notation/label_format.ini
+++ b/test_autolens/integration/config_mock/notation/label_format.ini
@@ -28,6 +28,7 @@ mass_to_light_gradient={:.2f}
 noise_factor={:.3f}
 noise_power={:.3f}
 noise_scale={:.3f}
+normalization_scale={:.4f}
 outer_coefficient={:.2f}
 pixels={:.2f}
 radius={:.2f}
