--- a/test_autolens/unit/config/notation/setup_tags.ini
+++ b/test_autolens/unit/config/notation/setup_tags.ini
@@ -11,11 +11,6 @@ hyper_image_sky=bg_sky
 hyper_background_noise=bg_noise
 hyper_fixed_after_source=fixed_from_source
 
-[source]
-source=source
-pixelization=pix
-regularization=reg
-
 [light]
 light=light
 light_centre=light_centre
@@ -42,7 +37,26 @@ align_light_mass_centre=align_light_mass_centre
 align_light_dark_centre=align_light_dark_centre
 align_bulge_dark_centre=align_bulge_dark_centre
 
-[total]
+[source]
+source=source
+
+[inversion]
+pixelization=pix
+regularization=reg
+
+[light_prior_model]
+EllipticalSersic=sersic
+EllipticalDevVaucouleurs=dev
+EllipticalExponential=exp
+EllipticalGassian=gauss
+EllipticalCoreSersic=core_sersic
+SphericalSersic=sersic_sph
+SphericalDevVaucouleurs=dev_sph
+SphericalExponential=exp_sph
+SphericalGassian=gauss_sph
+SphericalCoreSersic=core_sersic_sph
+
+[mass_prior_model]
 EllipticalIsothermal=sie
 EllipticalPowerLaw=power_law
 EllipticalBrokenPowerLaw=broken_power_law
