--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -24,7 +24,9 @@ magnification=False
 all_at_end_png=False
 all_at_end_fits=False
 subplot_fit=False
+model_images_of_galaxies=False
 subplots_of_plane_fits=False
+subtracted_images_of_galaxies=False
 data=False
 noise_map=False
 signal_to_noise_map=False
