setup.py refactored

--- a/docs/howtolens/config/notation/tags.ini
+++ b/docs/howtolens/config/notation/tags.ini
@@ -60,12 +60,12 @@ psf_shape=psf
 TransformerDFT=dft
 TransformerNUFFT=nufft
 
-[pixelization]
+[pixelization_prior_model]
 Rectangular=rect
 VoronoiMagnification=voro_mag
 VoronoiBrightnessImage=voro_image
 
-[regularization]
+[regularization_prior_model]
 Constant=const
 AdaptiveBrightness=adapt_bright
 
