--- a/test_autolens/config/notation/setup_tags.ini
+++ b/test_autolens/config/notation/setup_tags.ini
@@ -2,8 +2,15 @@
 pipeline=setup
 light_is_model=light_is_model
 
-[hyper]
+[names]
 hyper=hyper
+light=light
+mass=mass
+source=source
+smbh=smbh
+subhalo=subhalo
+
+[hyper]
 hyper_galaxies=galaxies
 hyper_galaxies_lens=lens
 hyper_galaxies_source=source
@@ -12,77 +19,78 @@ hyper_background_noise=bg_noise
 hyper_fixed_after_source=fixed_from_source
 
 [light]
-light=light
 light_centre=light_centre
 align_bulge_disk=align_bulge_disk
 align_bulge_disk_centre=centre
 align_bulge_disk_elliptical_comps=ell
-disk_as_sersic=disk_sersic
-include_envelope=include_envelope
-envelope_as_sersic=envelope_sersic
 
 [mass]
-mass=mass
 with_shear=with_shear
 no_shear=no_shear
 mass_centre=mass_centre
 mass_to_light_ratio=mlr
 free_mass_to_light_ratio=free
 constant_mass_to_light_ratio=const
-mass_to_light_ratio_gradient=grad
-bulge_mass_to_light_ratio_gradient=bulge
-disk_mass_to_light_ratio_gradient=disk
-envelope_mass_to_light_ratio_gradient=envelope
 align_light_mass_centre=align_light_mass_centre
 align_light_dark_centre=align_light_dark_centre
 align_bulge_dark_centre=align_bulge_dark_centre
-
-[source]
-source=source
 
 [inversion]
 pixelization=pix
 regularization=reg
 
-[light_prior_model]
-EllipticalSersic=sersic
-EllipticalDevVaucouleurs=dev
-EllipticalExponential=exp
-EllipticalGassian=gauss
-EllipticalCoreSersic=core_sersic
-SphericalSersic=sersic_sph
-SphericalDevVaucouleurs=dev_sph
-SphericalExponential=exp_sph
-SphericalGassian=gauss_sph
-SphericalCoreSersic=core_sersic_sph
-
-[mass_prior_model]
-EllipticalIsothermal=sie
-EllipticalPowerLaw=power_law
-EllipticalBrokenPowerLaw=broken_power_law
-EllipticalCoredPowerLaw=cored_power_law
-EllipticalCoredIsothermal=cored_sie
-
 [smbh]
-smbh=smbh
 smbh_centre_fixed=centre_fixed
 smbh_centre_free=centre_free
 
 [subhalo]
-subhalo=subhalo
 mass_is_model=mass_is_model
 mass_is_instance=mass_is_instance
 source_is_model=source_is_model
 source_is_instance=source_is_instance
 grid_size=grid
-subhalo_centre=sub_centre
-mass_at_200=sub_mass
+subhalo_centre=centre
+mass_at_200=mass
 
-[pixelization]
+[light_prior_model]
+EllipticalSersic=sersic
+SphericalSersic=sersic_sph
+EllipticalDevVaucouleurs=dev
+SphericalDevVaucouleurs=dev_sph
+EllipticalExponential=exp
+SphericalExponential=exp_sph
+EllipticalGassian=gauss
+SphericalGassian=gauss_sph
+EllipticalCoreSersic=core_sersic
+SphericalCoreSersic=core_sersic_sph
+
+[mass_prior_model]
+PointMass=point_mass
+EllipticalIsothermal=sie
+SphericalIsothermal=sis
+EllipticalPowerLaw=power_law
+SphericalPowerLaw=power_law_sph
+EllipticalBrokenPowerLaw=broken_power_law
+SphericalBrokenPowerLaw=broken_power_law_sph
+EllipticalCoredPowerLaw=cored_power_law
+SphericalCoredPowerLaw=cored_power_law_sph
+EllipticalCoredIsothermal=cored_sie
+SphericalCoredIsothermal=cored_sis
+EllipticalNFW=nfw
+SphericalNFW=nfw_sph
+SphericalTruncatedNFW=nfw_trun_sph
+SphericalTruncatedNFWMCRDuffy=nfw_trun_sph_duffy
+SphericalTruncatedNFWMCRLudlow=nfw_trun_sph_ludlow
+EllipticalGeneralizedNFW=gnfw
+SphericalGeneralizedNFW=gnfw_sph
+SphericalNFWMCRDuffy=nfw_sph_duffy
+SphericalNFWMCRLudlow=nfw_sph_ludlow
+
+[pixelization_prior_model]
 Rectangular=rect
 VoronoiMagnification=voro_mag
 VoronoiBrightnessImage=voro_image
 
-[regularization]
+[regularization_prior_model]
 Constant=const
 AdaptiveBrightness=adapt_bright
