--- a/docs/howtolens/config/grids/radial_minimum.ini
+++ b/docs/howtolens/config/grids/radial_minimum.ini
@@ -24,6 +24,8 @@ SphericalSersicRadialGradient=1e-6
 EllipticalSersicRadialGradient=1e-6
 SphericalExponentialRadialGradient=1e-6
 EllipticalExponentialRadialGradient=1e-6
+EllipticalChameleon=1e-8
+SphericalChameleon=1e-8
 EllipticalNFW=1e-6
 SphericalNFW=1e-6
 EllipticalGeneralizedNFW=1e-6
