--- a/test_autolens/config/notation/prior_model_tags.ini
+++ b/test_autolens/config/notation/prior_model_tags.ini
@@ -9,6 +9,8 @@ EllipticalGassian=gauss
 SphericalGassian=gauss_sph
 EllipticalCoreSersic=core_sersic
 SphericalCoreSersic=core_sersic_sph
+EllipticalChameleon=cham
+SphericalChameleon=cham_sph
 
 [mass]
 PointMass=point_mass
@@ -43,6 +45,8 @@ EllipticalSersicRadialGradient=sersic_grad
 SphericalSersicRadialGradient=sersic_grad_sph
 EllipticalExponentialRadialGradient=exp_grad
 SphericalExponentialRadialGradient=exp_grad_sph
+EllipticalChameleon=cham
+SphericalChameleon=cham_sph
 
 [pixelization]
 Rectangular=rect
