--- a/docs/howtolens/config/grids/interpolate.ini
+++ b/docs/howtolens/config/grids/interpolate.ini
@@ -22,6 +22,8 @@ EllipticalSersicRadialGradient=True
 SphericalSersicRadialGradient=True
 EllipticalExponentialRadialGradient=True
 SphericalExponentialRadialGradient=True
+EllipticalChameleon=False
+SphericalChameleon=False
 EllipticalNFW=True
 SphericalNFW=False
 EllipticalGeneralizedNFW=True
@@ -57,6 +59,8 @@ EllipticalDevVaucouleurs=False
 SphericalDevVaucouleurs=False
 EllipticalSersicRadialGradient=False
 SphericalSersicRadialGradient=False
+EllipticalChameleon=False
+SphericalChameleon=False
 EllipticalNFW=False
 SphericalNFW=False
 EllipticalGeneralizedNFW=False
@@ -92,7 +96,9 @@ EllipticalDevVaucouleurs=False
 SphericalDevVaucouleurs=False
 EllipticalSersicRadialGradient=False
 SphericalSersicRadialGradient=False
-EllipticalNF   W=False
+EllipticalChameleon=False
+SphericalChameleon=False
+EllipticalNFW=False
 SphericalNFW=False
 EllipticalGeneralizedNFW=False
 SphericalGeneralizedNFW=False
