--- a/howtolens/config/notation/label.ini
+++ b/howtolens/config/notation/label.ini
@@ -5,6 +5,8 @@ centre_1=x
 coefficient=\lambda
 contribution_factor=\omega0
 core_radius=Cr
+core_radius_0=Cr0
+core_radius_1=Cr1
 effective_radius=R
 einstein_radius=\theta
 elliptical_comps_0=e2
