--- a/howtolens/config/notation/tags.ini
+++ b/howtolens/config/notation/tags.ini
@@ -3,7 +3,7 @@ pipeline=setup
 pixelization=pix
 regularization=reg
 with_shear=with_shear
-no_shear=no_shear
+with_shear=with_shear
 light_is_model=light_is_model
 bulge_only=bulge_only
 align_bulge_disk=align_bulge_disk
