hyper phase visualization refactor

--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -50,10 +50,11 @@ regularization_weight_map=False
 interpolated_reconstruction=False
 interpolated_errors=False
 
-[hyper_galaxy]
-subplot_hyper_galaxy=False
+[hyper]
+fit_no_hyper=False
 model_image=False
-images=False
+images_of_galaxies=False
+contribution_maps_of_galaxies=False
 
 [galaxy_fit]
 all_at_end_png=False
