--- a/test_autolens/unit/pipeline/config/visualize/plots.ini
+++ b/test_autolens/unit/pipeline/config/visualize/plots.ini
@@ -48,10 +48,11 @@ regularization_weight_map=False
 interpolated_reconstruction=False
 interpolated_errors=True
 
-[hyper_galaxy]
-subplot_hyper_galaxy=True
+[hyper]
+fit_no_hyper=True
 model_image=True
-images=True
+images_of_galaxies=True
+contribution_maps_of_galaxies=True
 
 [galaxy_fit]
 all_at_end_png=True
