--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -13,6 +13,9 @@ flip_for_ds9=True
 hpc_mode=False
 iterations_per_update=5000
 
+[model]
+ignore_prior_limits=False
+
 [numba]
 nopython = True
 cache = True
