removed [args] methods from mat wrap

--- a/test_autolens/unit/config/visualize/mat_wrap_2d/CausticsLine.ini
+++ b/test_autolens/unit/config/visualize/mat_wrap_2d/CausticsLine.ini
@@ -1,15 +1,9 @@
 [figure]
-width=5
-style=--
-colors=w, g
-pointsize=21
+linewidth=5
+linestyle=--
+c=w, g
 
 [subplot]
-width=7
-style=--
-colors=g
-pointsize=23
-
-[args]
-plot=fmt, data, scalex, scaley, alpha, color, dashes, drawstyle, fillstyle, linestyle, linewidth, marker, markeredgecolor, markeredgewidth, markerfacecolor, markerfacecoloralt, markersize, xdata, ydata
-scatter=s, marker, cmap, norm, vmin, vmax, alpha, linewidths, edgecolors, plotnonfinite
+linewidth=7
+linestyle=--
+c=g
