--- a/test_autolens/unit/config/visualize/mat_wrap_2d/CriticalCurvesLine.ini
+++ b/test_autolens/unit/config/visualize/mat_wrap_2d/CriticalCurvesLine.ini
@@ -1,15 +1,9 @@
 [figure]
-width=4
-style=-
-colors=w, k
-pointsize=20
+linewidth=4
+linestyle=-
+c=w, k
 
 [subplot]
-width=6
-style=-
-colors=b
-pointsize=22
-
-[args]
-plot=fmt, data, scalex, scaley, alpha, color, dashes, drawstyle, fillstyle, linestyle, linewidth, marker, markeredgecolor, markeredgewidth, markerfacecolor, markerfacecoloralt, markersize, xdata, ydata
-scatter=s, marker, cmap, norm, vmin, vmax, alpha, linewidths, edgecolors, plotnonfinite
+linewidth=6
+linestyle=-
+c=b
