--- a/test_autolens/unit/config/notation/prior_model_tags.ini
+++ b/test_autolens/unit/config/notation/prior_model_tags.ini
@@ -32,6 +32,7 @@ SphericalTruncatedNFWMCRLudlow=nfw_trun_sph_ludlow
 EllipticalGeneralizedNFW=gnfw
 SphericalGeneralizedNFW=gnfw_sph
 SphericalNFWMCRDuffy=nfw_sph_duffy
+EllipticalNFWMCRLudlow=nfw_ludlow
 SphericalNFWMCRLudlow=nfw_sph_ludlow
 EllipticalSersic=sersic
 SphericalSersic=sersic_sph
