--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,19 +47,22 @@ jobs:
     - name: Install dependencies
       if: steps.cache-pip.outputs.cache-hit != 'true'
       run: |
-        pip install pytest
-        pip install -r PyAutoConf/requirements.txt
-        pip install -r PyAutoFit/requirements.txt
-        pip install -r PyAutoArray/requirements.txt
-        pip install -r PyAutoGalaxy/requirements.txt
-        pip install -r PyAutoLens/requirements.txt
+        pip3 install --upgrade pip
+        pip3 install setuptools
+        pip3 install wheel
+        pip3 install pytest
+        pip3 install -r PyAutoConf/requirements.txt
+        pip3 install -r PyAutoFit/requirements.txt
+        pip3 install -r PyAutoArray/requirements.txt
+        pip3 install -r PyAutoGalaxy/requirements.txt
+        pip3 install -r PyAutoLens/requirements.txt
     - name: Run tests
       run: |
         export ROOT_DIR=`pwd`
-        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoArray
         export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoConf
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoFit
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoArray
         export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoGalaxy
         export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoLens
-        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoFit
         pushd PyAutoLens
         pytest
