--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -1,55 +1,53 @@
 [dataset]
-subplot_dataset=False
-data=False
+subplot_dataset=True
+data=True
 noise_map=False
-psf=False
+psf=True
 uv_wavelengths=False
-inverse_noise_map=False
+inverse_noise_map=True
 signal_to_noise_map=False
 absolute_signal_to_noise_map=False
-potential_chi_squared_map=False
+potential_chi_squared_map=True
 
 [ray_tracing]
 all_at_end_png=False
-all_at_end_fits=False
-subplot_ray_tracing=False
-image=False
-source_plane_image=False
-convergence=False
+all_at_end_fits=True
+subplot_ray_tracing=True
+image=True
+source_plane_image=True
+convergence=True
 potential=False
 deflections=False
-magnification=False
+magnification=True
 
 [fit]
 all_at_end_png=False
-all_at_end_fits=False
-subplot_fit=False
-model_images_of_galaxies=False
+all_at_end_fits=True
+subplot_fit=True
 subplots_of_planes_fits=False
-subtracted_images_of_galaxies=False
-data=False
+data=True
 noise_map=False
 signal_to_noise_map=False
-model_data=False
+model_data=True
 residual_map=False
-normalized_residual_map=False
-chi_squared_map=False
-subtracted_images_of_planes=False
+normalized_residual_map=True
+chi_squared_map=True
+subtracted_images_of_planes=True
 model_images_of_planes=False
-plane_images_of_planes=False
+plane_images_of_planes=True
 
 [inversion]
 all_at_end_png=False
-subplot_inversion=False
-reconstructed_image=False
-reconstruction=False
+subplot_inversion=True
+reconstructed_image=True
+reconstruction=True
 errors=False
 residual_map=False
 normalized_residual_map=False
-chi_squared_map=False
+chi_squared_map=True
 regularization_weights=False
 interpolated_reconstruction=False
-interpolated_errors=False
+interpolated_errors=True
 
 [hyper]
 fit_no_hyper=True
@@ -58,10 +56,10 @@ images_of_galaxies=True
 contribution_maps_of_galaxies=True
 
 [galaxy_fit]
-all_at_end_png=False
-all_at_end_fits=False
-subplot_galaxy_fit=False
-image=False
+all_at_end_png=True
+all_at_end_fits=True
+subplot_galaxy_fit=True
+image=True
 noise_map=False
 model_image=False
 residual_map=False
@@ -72,4 +70,4 @@ triangle=False
 1d_params=False
 
 [other]
-stochastic_histogram=False
+stochastic_histogram=True
