renamed profile names

--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -17,18 +17,18 @@ iterations_per_update=5000
 ignore_prior_limits=False
 
 [numba]
-nopython = True
-cache = True
-parallel = False
+nopython=True
+cache=True
+parallel=False
 
 [calculation_grid]
-convergence_threshold = 0.1
-pixels = 51
+convergence_threshold=0.1
+pixels=51
 
 [inversion]
-interpolated_grid_shape = image_grid
-stochastic_histogram_samples = 2
-stochastic_histogram_bins = 2
+interpolated_grid_shape=image_grid
+stochastic_histogram_samples=2
+stochastic_histogram_bins=2
 
 [hyper]
 hyper_minimum_percent=0.01
