--- a/test_autolens/config/grids/interpolate.ini
+++ b/test_autolens/config/grids/interpolate.ini
@@ -1,15 +1,15 @@
 [deflections_from_grid]
-EllipticalIsothermal = False
-SphericalIsothermal = True
+EllIsothermal=False
+SphIsothermal=True
 
 [convergence_from_grid]
-EllipticalIsothermal = False
-SphericalIsothermal = True
+EllIsothermal=False
+SphIsothermal=True
 
 [potential_from_grid]
-EllipticalIsothermal = False
-SphericalIsothermal = True
+EllIsothermal=False
+SphIsothermal=True
 
 [image_from_grid]
-EllipticalSersic = False
-SphericalSersic = True
+EllSersic=False
+SphSersic=True
