--- a/test_autolens/config/visualize/include.ini
+++ b/test_autolens/config/visualize/include.ini
@@ -1,17 +1,17 @@
 [include_2d]
-origin = True
-mask = True
-grid = True
-border = True
-positions = True
-critical_curves = False
-caustics = False
-multiple_images = False
-light_profile_centres = True
-mass_profile_centres = True
-mapper_source_pixelization_grid = True
-inversion_grid = True
-mapper_data_pixelization_grid = True
+origin=True
+mask=True
+grid=True
+border=True
+positions=True
+critical_curves=False
+caustics=False
+multiple_images=False
+light_profile_centres=True
+mass_profile_centres=True
+mapper_source_pixelization_grid=True
+inversion_grid=True
+mapper_data_pixelization_grid=True
 parallel_overscan=True
 serial_prescan=True
 serial_overscan=True
