--- a/test_autolens/config/non_linear/nest/DynestyDynamic.ini
+++ b/test_autolens/config/non_linear/nest/DynestyDynamic.ini
@@ -1,18 +1,18 @@
 [general]
-bound = multi
-sample = auto
-bootstrap = 0
-enlarge = -1
-update_interval = -1.0
-vol_dec = 0.5
-vol_check = 2.0
-walks = 25
+bound=multi
+sample=auto
+bootstrap=0
+enlarge=-1
+update_interval=-1.0
+vol_dec=0.5
+vol_check=2.0
+walks=25
 sampling_efficiency=0.5
-slices = 5
-fmove = 0.9
-max_move = 100
-terminate_at_acceptance_ratio = False
-acceptance_ratio_threshold = 0.1
+slices=5
+fmove=0.9
+max_move=100
+terminate_at_acceptance_ratio=False
+acceptance_ratio_threshold=0.1
 
 [updates]
 iterations_per_update=2500
