minor config changes

--- a/test_autolens/config/non_linear/nest/DynestyStatic.ini
+++ b/test_autolens/config/non_linear/nest/DynestyStatic.ini
@@ -1,20 +1,20 @@
 [search]
 n_live_points=50
-sampling_efficiency=0.2
 evidence_tolerance=-1.0
 bound=multi
 sample=auto
-bootstrap=0
-enlarge=-1
-update_interval=-1.0
+bootstrap=None
+enlarge=None
+update_interval=None
 vol_dec=0.5
 vol_check=2.0
 walks=5
+sampling_efficiency=0.2
 slices=5
 fmove=0.9
 max_move=0
-maxiter=0
-maxcall=0
+maxiter=None
+maxcall=None
 logl_max=inf
 n_effective=0
 
