--- a/test_autolens/config/non_linear/nest/DynestyDynamic.ini
+++ b/test_autolens/config/non_linear/nest/DynestyDynamic.ini
@@ -1,9 +1,9 @@
 [general]
 bound=multi
 sample=auto
-bootstrap=0
-enlarge=-1
-update_interval=-1.0
+bootstrap=None
+enlarge=None
+update_interval=None
 vol_dec=0.5
 vol_check=2.0
 walks=25
@@ -37,7 +37,7 @@ number_of_cores=1
 
 [tag]
 name=dynesty_dynamic
-n_live_points=nlive
+n_live_points=nlive_init
 sample=sample
 bound=bound
 enlarge=enlarge
