gird 2d refactor complete

--- a/test_autolens/config/grids/interpolate.ini
+++ b/test_autolens/config/grids/interpolate.ini
@@ -1,15 +1,15 @@
-[deflections_from_grid]
+[deflections_2d_from_grid]
 EllIsothermal=False
 SphIsothermal=True
 
-[convergence_from_grid]
+[convergence_2d_from_grid]
 EllIsothermal=False
 SphIsothermal=True
 
-[potential_from_grid]
+[potential_2d_from_grid]
 EllIsothermal=False
 SphIsothermal=True
 
-[image_from_grid]
+[image_2d_from_grid]
 EllSersic=False
 SphSersic=True
