--- a/test_autolens/config/non_linear/nest/DynestyStatic.ini
+++ b/test_autolens/config/non_linear/nest/DynestyStatic.ini
@@ -1,5 +1,5 @@
 [search]
-n_live_points=50
+nlive=50
 evidence_tolerance=-1.0
 bound=multi
 sample=auto
@@ -20,8 +20,6 @@ n_effective=0
 
 [settings]
 stagger_resampling_likelihood=False
-terminate_at_acceptance_ratio=False
-acceptance_ratio_threshold=1.0
 
 [updates]
 iterations_per_update=2500
