--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,15 +1,5 @@
-autoconf==0.8.0
-autofit==0.74.0
-autoarray==0.20.0
-autogalaxy==0.19.0
 astropy>=3.0.0
-nbsphinx>=0.7.0
-nbsphinx-link>=1.3.0
 numpydoc>=1.0.0
 matplotlib>=3.0.3
 numpy>=1.18.0
-ipython>=7.0.1
-ipykernel>=5.1.0
-jupyter_client>=5.2.3
-pygments==2.7.4
-pyprojroot>=0.2.0
+pyprojroot==0.2.0
