--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -65,9 +65,9 @@ model_image=False
 residual_map=False
 chi_squared_map=False
 
-[pdf]
-triangle=False
-1d_params=False
+[samples]
+corner=True
+progress=False
 
 [other]
 stochastic_histogram=True
