--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
         pip3 install -r PyAutoFit/requirements.txt
         pip3 install -r PyAutoArray/requirements.txt
         pip3 install -r PyAutoGalaxy/requirements.txt
+        pip3 install -r PyAutoGalaxy/optional_requirements.txt
         pip3 install -r PyAutoLens/requirements.txt
     - name: Run tests
       run: |
