--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,32 +37,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/cache@v2
-      id: cache-pip
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    - name: Install dependencies
-    #  if: steps.cache-pip.outputs.cache-hit != 'true'
-      run: |
-        pip3 install --upgrade pip
-        pip3 install setuptools
-        pip3 install wheel
-        pip3 install pytest
-        pip3 install -r PyAutoConf/requirements.txt
-        pip3 install -r PyAutoFit/requirements.txt
-        pip3 install -r PyAutoArray/requirements.txt
-        pip3 install -r PyAutoGalaxy/requirements.txt
-        pip3 install -r PyAutoLens/requirements.txt
     - name: Extract branch name
       shell: bash
       run: |
         cd PyAutoLens
         echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: extract_branch
-    - name: Change to same branch if exists in others
+    - name: Change to same branch if exists in deps
       shell: bash
       run: |
         export PACKAGES=("PyAutoConf" "PyAutoArray" "PyAutoFit" "PyAutoGalaxy" "PyAutoLens")
@@ -79,13 +60,24 @@ jobs:
           fi
           popd
         done
-#    - name: Run tests
-#      run: |
-#        export ROOT_DIR=`pwd`
-#        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoConf
-#        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoFit
-#        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoArray
-#        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoGalaxy
-#        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoLens
-#        pushd PyAutoLens
-#        pytest
+    - name: Install dependencies
+      run: |
+        pip3 install --upgrade pip
+        pip3 install setuptools
+        pip3 install wheel
+        pip3 install pytest
+        pip3 install -r PyAutoConf/requirements.txt
+        pip3 install -r PyAutoFit/requirements.txt
+        pip3 install -r PyAutoArray/requirements.txt
+        pip3 install -r PyAutoGalaxy/requirements.txt
+        pip3 install -r PyAutoLens/requirements.txt
+    - name: Run tests
+      run: |
+        export ROOT_DIR=`pwd`
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoConf
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoFit
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoArray
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoGalaxy
+        export PYTHONPATH=$PYTHONPATH:$ROOT_DIR/PyAutoLens
+        pushd PyAutoLens
+        pytest
