--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -22,6 +22,9 @@ nopython=True
 cache=True
 parallel=False
 
+[grid]
+remove_projected_centre=False
+
 [inversion]
 interpolated_grid_shape=image_grid
 stochastic_histogram_samples=2
@@ -34,6 +37,7 @@ stochastic_outputs=False
 
 [test]
 test_mode=False
+parallel_profile=False
 
 [analysis]
 n_cores=1
