--- a/test_autolens/config/grids/interpolate.ini
+++ b/test_autolens/config/grids/interpolate.ini
@@ -1,15 +1,19 @@
 [deflections_2d_from_grid]
 EllIsothermal=False
+EllIsothermalInitialize=False
 SphIsothermal=True
 
 [convergence_2d_from_grid]
 EllIsothermal=False
+EllIsothermalInitialize=False
 SphIsothermal=True
 
 [potential_2d_from_grid]
 EllIsothermal=False
+EllIsothermalInitialize=False
 SphIsothermal=True
 
 [image_2d_from_grid]
 EllSersic=False
+EllSersicInitialize=False
 SphSersic=True
