--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -26,6 +26,7 @@ parallel=False
 remove_projected_centre=False
 
 [inversion]
+use_sksparse_if_installed=True
 interpolated_grid_shape=image_grid
 stochastic_histogram_samples=2
 stochastic_histogram_bins=2
@@ -44,6 +45,3 @@ parallel_profile=False
 [analysis]
 preload_attempts=250
 n_cores=1
-
-[bc]
-rename_zips=False
