unit test on profile_log_likelihood_function passing

--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -35,6 +35,11 @@ hyper_minimum_percent=0.01
 hyper_noise_limit=1.0e8
 stochastic_outputs=False
 
+[profiling]
+perform=True
+repeats=1
+global=False
+
 [test]
 test_mode=False
 check_figure_of_merit_sanity=False
