turn w tilde off if check preloads fails

--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -27,6 +27,10 @@ remove_projected_centre=False
 
 [inversion]
 interpolated_grid_shape=image_grid
+
+[w_tilde]
+snr_cut_iteration=False
+snr_cut_start=1.0e-10
 stochastic_histogram_samples=2
 stochastic_histogram_bins=2
 
