added subplot of plane images to TracerPlotter

--- a/autolens/config/visualize/plots.ini
+++ b/autolens/config/visualize/plots.ini
@@ -2,6 +2,7 @@
 all_at_end_png=False
 all_at_end_fits=False
 subplot_ray_tracing=True
+subplot_plane_images=True
 image=False
 source_plane_image=False
 convergence=False
