--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -13,6 +13,7 @@ potential_chi_squared_map=True
 all_at_end_png=False
 all_at_end_fits=True
 subplot_ray_tracing=True
+subplot_plane_images=True
 image=True
 source_plane_image=True
 convergence=True
