--- a/test_autolens/config/notation/label.ini
+++ b/test_autolens/config/notation/label.ini
@@ -1,5 +1,6 @@
 [label]
 alpha=\alpha
+break_radius=\theta_{\rm B}
 centre_0=y
 centre_1=x
 coefficient=\lambda
@@ -7,13 +8,13 @@ contribution_factor=\omega0
 core_radius=Cr
 core_radius_0=Cr0
 core_radius_1=Cr1
-effective_radius=R
-einstein_radius=\theta
+effective_radius=R_{\rm eff}
+einstein_radius=\theta_{\rm Ein}
 elliptical_comps_0=e2
 elliptical_comps_1=e1
 gamma=\gamma
 inner_coefficient=\lambda1
-inner_slope=Si
+inner_slope=t_{\rm 1}
 intensity=I
 intensity_break=Ib
 kappa_s=\kappa
@@ -25,6 +26,7 @@ noise_power=\omega2
 noise_scale=\sigma1
 normalization_scale=n
 outer_coefficient=\lambda2
+outer_slope=t_{\rm 2}
 pixels=N
 radius_break=Rb
 redshift=z
