visualizer docstrings added

--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -54,7 +54,7 @@ model_image=True
 images_of_galaxies=True
 contribution_maps_of_galaxies=True
 
-[galaxy_fit]
+[fit_quantity]
 all_at_end_png=True
 all_at_end_fits=True
 subplot_galaxy_fit=True
