--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -57,7 +57,7 @@ contribution_maps_of_galaxies=True
 [fit_quantity]
 all_at_end_png=True
 all_at_end_fits=True
-subplot_galaxy_fit=True
+subplot_fit=True
 image=True
 noise_map=False
 model_image=False
