--- a/test_autolens/config/notation/label.ini
+++ b/test_autolens/config/notation/label.ini
@@ -4,57 +4,56 @@ break_radius=\theta_{\rm B}
 centre_0=y
 centre_1=x
 coefficient=\lambda
-contribution_factor=\omega0
-core_radius=Cr
-core_radius_0=Cr0
-core_radius_1=Cr1
+contribution_factor=\omega_{\rm 0}
+core_radius=C_{\rm r}
+core_radius_0=C_{rm r0}
+core_radius_1=C_{\rm r1}
 effective_radius=R_{\rm eff}
 einstein_radius=\theta_{\rm Ein}
-elliptical_comps_0=e2
-elliptical_comps_1=e1
+elliptical_comps_0=\epsilon_{\rm 1}
+elliptical_comps_1=\epsilon_{\rm 2}
+flux=F
 gamma=\gamma
-inner_coefficient=\lambda1
+inner_coefficient=\lambda_{\rm 1}
 inner_slope=t_{\rm 1}
 intensity=I
-intensity_break=Ib
-kappa_s=\kappa
-mass_at_200=m200
-mass_to_light_ratio=Psi
-mass_to_light_gradient=Tau
-noise_factor=\omega1
-noise_power=\omega2
-noise_scale=\sigma1
+intensity_break=I_{\rm b}
+kappa=\kappa
+kappa_s=\kappa_{\rm s}
+mass_at_200=m_{\rm 200}
+mass_to_light_ratio=\Psi
+mass_to_light_gradient=\Tau
+noise_factor=\omega_{\rm 1}
+noise_power=\omega{\rm 2}
+noise_scale=\sigma_{\rm 1}
 normalization_scale=n
-outer_coefficient=\lambda2
+outer_coefficient=\lambda_{\rm 2}
 outer_slope=t_{\rm 2}
-pixels=N
-radius_break=Rb
+pixels=N_{\rm pix}
+radius_break=R_{\rm b}
 redshift=z
-redshift_object=zo
-redshift_source=zs
-scale_radius=Rs
+redshift_object=z_{\rm obj}
+redshift_source=z_{\rm src}
+scale_radius=R_{\rm s}
+scatter=\sigma
 sersic_index=n
-shape_0=y
-shape_1=x
-sigma=sigma
+shape_0=y_{\rm pix}
+shape_1=x_{\rm pix}
+sigma=\sigma
 signal_scale=V
-sky_scale=\sigma0
-slope=S
-truncation_radius=Rt
-weight_floor=Wf
-weight_power=Wp
+sky_scale=\sigma_{\rm 0}
+slope=\gamma
+truncation_radius=R_{\rm t}
+weight_floor=W_{\rm f}
+weight_power=W_{\rm p}
 
-[subscript]
-EllLightProfile=l
-EllMassProfile=m
-EllNFW=d
-ExternalShear=sh
-HyperBackgroundNoise=hnb
-HyperGalaxy=hg
-HyperImageSky=hi
+[superscript]
+ExternalShear=ext
+HyperBackgroundNoise=hyper
+HyperGalaxy=hyper
+HyperImageSky=hyper
 InputDeflections=defl
-MassSheet=ms
 Pixelization=pix
-PointMass=m
+Point=point
 Regularization=reg
-Redshift=g
+Redshift=
