updated to work with autofit refactor

--- a/test_autolens/config/notation/label.ini
+++ b/test_autolens/config/notation/label.ini
@@ -20,7 +20,7 @@ intensity=I
 intensity_break=I_{\rm b}
 kappa=\kappa
 kappa_s=\kappa_{\rm s}
-mass_at_200=m_{\rm 200}
+mass_at_200=M_{\rm 200}
 mass_to_light_ratio=\Psi
 mass_to_light_gradient=\Tau
 noise_factor=\omega_{\rm 1}
