--- a/test_autolens/config/notation/label.ini
+++ b/test_autolens/config/notation/label.ini
@@ -22,7 +22,7 @@ kappa=\kappa
 kappa_s=\kappa_{\rm s}
 mass_at_200=M_{\rm 200}
 mass_to_light_ratio=\Psi
-mass_to_light_gradient=\Tau
+mass_to_light_gradient=\Gamma
 noise_factor=\omega_{\rm 1}
 noise_power=\omega{\rm 2}
 noise_scale=\sigma_{\rm 1}
