--- a/autolens/config/visualize/plots.ini
+++ b/autolens/config/visualize/plots.ini
@@ -11,6 +11,7 @@ deflections=False
 magnification=False
 
 [fit]
+subplots_of_planes_fits=True
 subtracted_images_of_planes=True
 model_images_of_planes=True
 plane_images_of_planes=True
