--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -2,12 +2,14 @@
 subplot_dataset=True
 data=True
 noise_map=False
-psf=True
 uv_wavelengths=False
 inverse_noise_map=True
 signal_to_noise_map=False
 absolute_signal_to_noise_map=False
 potential_chi_squared_map=True
+
+[imaging]
+psf=True
 
 [ray_tracing]
 all_at_end_png=False
@@ -37,6 +39,8 @@ subtracted_images_of_planes=True
 model_images_of_planes=False
 plane_images_of_planes=True
 
+[fit_imaging]
+
 [inversion]
 all_at_end_png=False
 subplot_inversion=True
@@ -47,6 +51,28 @@ residual_map=False
 normalized_residual_map=False
 chi_squared_map=True
 regularization_weights=False
+
+[interferometer]
+uv_wavelengths=False
+amplitudes_vs_uv_distances=False
+phases_vs_uv_distances=False
+dirty_image=False
+dirty_noise_map=False
+dirty_signal_to_noise_map=False
+dirty_inverse_noise_map=False
+
+[fit_interferometer]
+uv_wavelengths=False
+amplitudes_vs_uv_distances=False
+phases_vs_uv_distances=False
+dirty_image=False
+dirty_noise_map=False
+dirty_signal_to_noise_map=False
+dirty_inverse_noise_map=False
+dirty_residual_map=False
+dirty_normalized_residual_map=False
+dirty_chi_squared_map=False
+
 
 [hyper]
 fit_no_hyper=True
