--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -41,6 +41,11 @@ plane_images_of_planes=True
 
 [fit_imaging]
 
+[galaxies]
+image=True
+convergence=True
+potential=True
+
 [inversion]
 all_at_end_png=False
 subplot_inversion=True
