visualize image with positions

--- a/autolens/config/visualize/plots.ini
+++ b/autolens/config/visualize/plots.ini
@@ -16,5 +16,8 @@ subtracted_images_of_planes=True
 model_images_of_planes=True
 plane_images_of_planes=True
 
+[positions]
+image_with_positions=True
+
 [other]
 stochastic_histogram=False
