--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -11,6 +11,9 @@ potential_chi_squared_map=True
 [imaging]
 psf=True
 
+[positions]
+image_with_positions=True
+
 [ray_tracing]
 all_at_end_png=False
 all_at_end_fits=True
@@ -77,7 +80,6 @@ dirty_inverse_noise_map=False
 dirty_residual_map=False
 dirty_normalized_residual_map=False
 dirty_chi_squared_map=False
-
 
 [hyper]
 fit_no_hyper=True
