--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,5 +6,5 @@ pyprojroot==0.2.0
 scikit-learn==0.21.3
 autoconf==2022.05.02.1
 autofit==2022.05.02.1
-autofit==2022.05.02.1
+autoarray==2022.05.02.1
 autogalaxy==2022.05.02.1
