--- a/test_autolens/config/grids/interpolate.ini
+++ b/test_autolens/config/grids/interpolate.ini
@@ -1,19 +1,19 @@
-[deflections_yx_2d_from_grid]
+[deflections_yx_2d_from]
 EllIsothermal=False
 EllIsothermalInitialize=False
 SphIsothermal=True
 
-[convergence_2d_from_grid]
+[convergence_2d_from]
 EllIsothermal=False
 EllIsothermalInitialize=False
 SphIsothermal=True
 
-[potential_2d_from_grid]
+[potential_2d_from]
 EllIsothermal=False
 EllIsothermalInitialize=False
 SphIsothermal=True
 
-[image_2d_from_grid]
+[image_2d_from]
 EllSersic=False
 EllSersicInitialize=False
 SphSersic=True
