--- a/test_autolens/config/visualize/plots.ini
+++ b/test_autolens/config/visualize/plots.ini
@@ -45,9 +45,9 @@ plane_images_of_planes=True
 [fit_imaging]
 
 [galaxies]
-image=True
-convergence=True
-potential=True
+image=False
+convergence=False
+potential=False
 
 [inversion]
 all_at_end_png=False
