fixed stochastic pixelization output

--- a/test_autolens/config/general.ini
+++ b/test_autolens/config/general.ini
@@ -43,6 +43,7 @@ repeats=1
 test_mode=False
 check_figure_of_merit_sanity=False
 check_preloads=False
+disable_positions_lh_inversion_check=False
 
 [analysis]
 preload_attempts=250
