--- a/test_autolens/config/non_linear/nest/DynestyDynamic.ini
+++ b/test_autolens/config/non_linear/nest/DynestyDynamic.ini
@@ -4,8 +4,7 @@ sample=auto
 bootstrap=None
 enlarge=None
 update_interval=None
-vol_dec=0.5
-vol_check=2.0
+first_update=None
 walks=25
 sampling_efficiency=0.5
 slices=5
