--- a/test_autolens/config/non_linear/nest/DynestyStatic.ini
+++ b/test_autolens/config/non_linear/nest/DynestyStatic.ini
@@ -6,8 +6,7 @@ sample=auto
 bootstrap=None
 enlarge=None
 update_interval=None
-vol_dec=0.5
-vol_check=2.0
+first_update=None
 walks=5
 sampling_efficiency=0.2
 slices=5
