--- a/test_autolens/config/notation/label.ini
+++ b/test_autolens/config/notation/label.ini
@@ -17,8 +17,7 @@ flux=F
 gamma=\gamma
 inner_coefficient=\lambda_{\rm 1}
 inner_slope=t_{\rm 1}
-intensity=I
-intensity_break=I_{\rm b}
+intensity=I_{\rm b}
 kappa=\kappa
 kappa_s=\kappa_{\rm s}
 mass_at_200=M_{\rm 200}
