--- a/test_autolens/config/grids/interpolate.ini
+++ b/test_autolens/config/grids/interpolate.ini
@@ -1,19 +1,19 @@
 [deflections_yx_2d_from]
-EllIsothermal=False
-EllIsothermalInitialize=False
-SphIsothermal=True
+Isothermal=False
+IsothermalInitialize=False
+IsothermalSph=True
 
 [convergence_2d_from]
-EllIsothermal=False
-EllIsothermalInitialize=False
-SphIsothermal=True
+Isothermal=False
+IsothermalInitialize=False
+IsothermalSph=True
 
 [potential_2d_from]
-EllIsothermal=False
-EllIsothermalInitialize=False
-SphIsothermal=True
+Isothermal=False
+IsothermalInitialize=False
+IsothermalSph=True
 
 [image_2d_from]
-EllSersic=False
-EllSersicInitialize=False
-SphSersic=True
+Sersic=False
+SersicInitialize=False
+SersicSph=True
