--- a/test_autolens/config/grids/radial_minimum.ini
+++ b/test_autolens/config/grids/radial_minimum.ini
@@ -22,12 +22,12 @@ gNFWSph=1e-8
 EllMassProfile=1e-8
 PowerLawBroken=1e-8
 PowerLawBrokenSph=1e-8
-PowerLawCored=1e-8
-PowerLawCoredSph=1e-8
+PowerLawCore=1e-8
+PowerLawCoreSph=1e-8
 PowerLaw=1e-8
 PowerLawSph=1e-8
-IsothermalCored=1e-8
-IsothermalCoredSph=1e-8
+IsothermalCore=1e-8
+IsothermalCoreSph=1e-8
 gNFW=1e-8
 NFWTruncatedSph=1e-8
 SphNFWTruncatedMCR=1e-8
