ellipitcal_comps -> ell_comps

--- a/test_autolens/config/notation/label.ini
+++ b/test_autolens/config/notation/label.ini
@@ -11,8 +11,8 @@ core_radius_0=C_{rm r0}
 core_radius_1=C_{\rm r1}
 effective_radius=R_{\rm eff}
 einstein_radius=\theta_{\rm Ein}
-elliptical_comps_0=\epsilon_{\rm 1}
-elliptical_comps_1=\epsilon_{\rm 2}
+ell_comps_0=\epsilon_{\rm 1}
+ell_comps_1=\epsilon_{\rm 2}
 flux=F
 gamma=\gamma
 inner_coefficient=\lambda_{\rm 1}
