--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
             echo "Branch $BRANCH did not exist in $PACKAGE"
           else
             echo "Branch $BRANCH did exist in $PACKAGE"
+            git fetch
             git checkout $BRANCH
           fi
           popd
